skinStyles/extensions/UserProfileV2/ext.userProfileV2.less
/*
 * Citizen
 *
 * SkinStyles for UserProfileV2
 * Module: ext.userProfileV2
 * Version: main 4dddf5fe
 *
 * Date: 2026-03-03
*/

/* ext.userProfileV2.less */

.profile-header-attributes > h1,
.profile-header-attributes > h2 {
	font-family: var( --font-family-base ) !important;
	font-size: var( --font-size-xxx-large );
	font-weight: var( --font-weight-bold );
}

.profile-user-group {
	margin-top: -1px;
	font-weight: var( --font-weight-medium );
	color: var( --color-emphasized );
	/* stylelint-disable-next-line declaration-property-value-disallowed-list */
	text-transform: capitalize;
	background: var( --color-surface-1 );
	border-radius: var( --border-radius-base );
}

.profile-header-statistics {
	font-size: var( --font-size-medium );
}

.external-link.tooltip:hover::after {
	font-size: var( --font-size-base );
	color: var( --color-emphasized );
	background: var( --color-surface-2 );
	border-radius: var( --border-radius-base );
}

.profile-externalLinks svg,
.profile-avatar-edit-action svg {
	filter: var( --filter-invert );
}

@media screen and ( max-width: 536px ) {
	.profile-identitybox {
		flex-direction: column;
	}

	ul.profile-header-statistics > li:first-child::after {
		content: '\2003';
	}

	ul.profile-header-statistics > li:not( :first-child ) {
		margin-left: unset !important;
	}
}

